examples/test/testpolicy16234.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16234
  namespace: namespace115
spec:
  podSelector:
    matchLabels:
      key24: value30
      key19: value42
      key32: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value46
          key45: value6
          key6: value13
